--- a/.github/workflows/generate-images-json.yml
+++ b/.github/workflows/generate-images-json.yml
@@ -31,11 +31,13 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-
+          
       - name: Commit and push changes
         run: |
           git add images.json  # Ajoute le fichier images.json mis à jour
           git commit -m "Update images.json"  # Commit du fichier JSON mis à jour
-          git push origin HEAD  # Pousse les changements dans ton dépôt, avec le token d'accès
+          
+          # Authentifie via le token pour pousser les changements
+          git push https://github.com/${{ github.repository }}.git HEAD:main
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Utilise le token GitHub Actions pour les permissions
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Utilise le token GitHub Actions pour les permissions     
