--- a/.github/workflows/generate-images-json.yml
+++ b/.github/workflows/generate-images-json.yml
@@ -3,27 +3,25 @@ name: Update Images JSON
 on:
   push:
     paths:
-      - 'Images/**'  # Quand des images sont ajoutées ou modifiées dans le dossier 'images/'
+      - 'images/**'  # Quand des images sont ajoutées ou modifiées dans le dossier 'images/'
+
+permissions:
+  contents: write  # Ajoute cette ligne pour permettre l'écriture dans le dépôt
 
 jobs:
   update-json:
-    runs-on: ubuntu-latest  # Utilise une machine virtuelle Ubuntu pour exécuter l'action
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2  # Récupère ton code source
+        uses: actions/checkout@v2
 
       - name: Generate images.json
         run: |
-          # Liste toutes les images dans le dossier 'images' et crée un fichier images.json
-          find Images/ -type f -name '*.jpg' -o -name '*.jpeg' -o -name '*.png' -o -name '*.gif' > images.txt
-          
-          # Crée un fichier JSON avec la liste des images
+          find images/ -type f -name '*.jpg' -o -name '*.jpeg' -o -name '*.png' -o -name '*.gif' > images.txt
           echo '[' > images.json
           while read -r image; do
             echo "  \"${image}\"," >> images.json
           done < images.txt
-          
-          # Retirer la dernière virgule
           sed -i '$ s/,$//' images.json
           echo ']' >> images.json
 
@@ -31,13 +29,11 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          
+
       - name: Commit and push changes
         run: |
-          git add images.json  # Ajoute le fichier images.json mis à jour
-          git commit -m "Update images.json"  # Commit du fichier JSON mis à jour
-          
-          # Authentifie via le token pour pousser les changements
+          git add images.json
+          git commit -m "Update images.json"
           git push https://github.com/${{ github.repository }}.git HEAD:main
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Utilise le token GitHub Actions pour les permissions     
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
